--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&display=swap');
-
 /* base styles */
 :root{
   --button-margin: 5px;
@@ -23,19 +21,26 @@
 
 .display{
   color: white;
-  background-color: rgba(21, 23, 54, 0.877);
+  background-color: rgba(207, 18, 81, 0.877);
   display: flex;
   justify-content: right;
   font-size: 30px;
   height: 50px;
-  padding: 0 30px 0 0;
+  padding: 0 30px;
   border-radius: 25px 25px 0 0;
+  flex-direction: column;
+  align-items: flex-end;
+  justify-content: space-around;
+  word-wrap: break-word;
+  word-break: break-all;
 }
 
 .numbers{
+  display: grid;
   background-color: rgb(38, 38, 41);
   border-radius: 0 0 25px 25px;
   padding: 10px 0 10px 0;
+  grid-template-rows: repeat(7rem, auto);
 }
 
 .row{
